--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,13 @@ a {
   justify-content: space-between;
 }
 /*  Header */
+.fixed-header {
+  background: #e6f0ff;
+  padding-top: 26px;
+  position: sticky;
+  top: -26px;
+  z-index: 1;
+}
 .header {
   /* width: 144rem; */
   position: relative;
@@ -56,7 +63,7 @@ a {
 .navbar {
   display: flex;
   align-items: center;
-  padding-top: 38px;
+  padding: 12px 0;
 }
 
 .navbar ul {
@@ -93,7 +100,7 @@ a {
   border-radius: 8px;
 }
 .hero {
-  margin-top: 130px;
+  padding-top: 130px;
 }
 .hero .info {
   width: 51%;
